Bug 1864 - Missing initialisation in _XFopenFile
Summary: Missing initialisation in _XFopenFile
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xlib (show other bugs)
Version: git
Hardware: x86 (IA32) All
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 1802
  Show dependency treegraph
 
Reported: 2004-11-15 05:24 UTC by Alexander Gottwald
Modified: 2004-12-11 23:36 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] initializes pbuf to NULL (487 bytes, patch)
2004-11-15 05:25 UTC, Alexander Gottwald
roland.mainz: 6.8-branch+
Details | Splinter Review
[FIXED_X11R68x] patch for XopenFile (449 bytes, patch)
2004-12-01 04:42 UTC, Alexander Gottwald
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Alexander Gottwald 2004-11-15 05:24:31 UTC
pbuf is not initialized in _XFopenFile. Later the pointer is checked for NULL
and freed otherwise. If the file was not found the pointer is uninitialized and
random  memory is freed.
Comment 1 Alexander Gottwald 2004-11-15 05:25:28 UTC
Created attachment 1310 [details] [review]
[FIXED_X11R68x] initializes pbuf to NULL
Comment 2 Alexander Gottwald 2004-11-15 05:30:31 UTC
/cvs/xorg/xc/lib/X11/XlibInt.c,v  <--  XlibInt.c
new revision: 1.3; previous revision: 1.2
/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.528; previous revision: 1.527

fixed in HEAD
Comment 3 Roland Mainz 2004-11-19 07:31:38 UTC
Comment on attachment 1310 [details] [review]
[FIXED_X11R68x] initializes pbuf to NULL

Approved for the X11R6.8.x branch in the 2004-11-17 release-wranglers phone
call.
Please don't commit it yourself, I'll handle that once the CVS service is
available again.
Comment 4 Alexander Gottwald 2004-12-01 04:42:49 UTC
Created attachment 1434 [details] [review]
[FIXED_X11R68x] patch for XopenFile

Fixing same error in _XopenFile

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.554; previous revision: 1.553
/cvs/xorg/xc/lib/X11/XlibInt.c,v  <--  XlibInt.c
new revision: 1.5; previous revision: 1.4
Comment 5 Roland Mainz 2004-12-08 06:01:52 UTC
Comment on attachment 1434 [details] [review]
[FIXED_X11R68x] patch for XopenFile

Approved in the 2004-12-06 release-wranglers conference call.
Please do not commit it yourself, I'll do that later today...
Comment 6 Roland Mainz 2004-12-12 18:32:09 UTC
Comment on attachment 1310 [details] [review]
[FIXED_X11R68x] initializes pbuf to NULL

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.26; previous revision: 1.365.2.25
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/lib/X11/XlibInt.c,v  <--  XlibInt.c
new revision: 1.2.4.1; previous revision: 1.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 7 Roland Mainz 2004-12-12 18:36:30 UTC
Comment on attachment 1434 [details] [review]
[FIXED_X11R68x] patch for XopenFile

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.27; previous revision: 1.365.2.26
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/lib/X11/XlibInt.c,v  <--  XlibInt.c
new revision: 1.2.4.2; previous revision: 1.2.4.1
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org..


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.