//bugs.freedesktop.org/show_bug.cgi?id=1864) attachment #1310 (https://bugs.freedesktop.org/attachment.cgi?id=1310): Fix random crashes because |pbuf| variable is not initialized in |_XFopenFile| (later the pointer is checked for |NULL| and freed otherwise. If the file was not found the pointer is uninitialized and rando memory is freed). Patch by Alexander Gottwald <ago@freedesktop.org>